# ota-flasher

./: Cargo.toml  SCALE_PLAN.md
.github/workflows/: release.yml
src/: app.rs  compile.rs  config.rs  main.rs  mqtt.rs  types.rs  worker.rs
