[package]
name = "ota-flasher"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "ota-flasher"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
rumqttc = { version = "0.24", features = ["use-rustls"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
rfd = "0.15"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
egui = "0.29"

[target.'cfg(not(target_os = "linux"))'.dependencies]
eframe = { version = "0.29" }

[target.'cfg(target_os = "linux")'.dependencies]
eframe = { version = "0.29", features = ["x11", "wayland"] }

[profile.release]
opt-level = 3
lto = true
strip = true
